# rust-image-pipeline-update-image

./: Cargo.toml  README.md
src/: main.rs
