[package]
name = "rust-image-pipeline-update-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-imagebuilder = "0.19.0"
clap = { version = "4.0.9", features = ["derive"] }
semver = "1.0.14"
tokio = { version = "1.21.2", features = ["full"] }
